--- a/index.html
+++ b/index.html
@@ -14,13 +14,19 @@
 </head>
 <body>
     <header>
-        <div class="left"><a href="#"><i class="fa-solid fa-code" style="padding-right:15px;"></i>BsCode47</a></div>
+        <div class="left"><a href="index.html"><i class="fa-solid fa-code" style="padding-right:15px;"></i>BsCode</a></div>
         <div class="right"><i class="fa-solid fa-bars" style="cursor:pointer;"></i></div>
     </header>
     <div class="side_box">
-        <p style="margin-bottom:50px;"><i class="fa-solid fa-code" style="padding-right:15px;"></i>BsCode47</p>
+        <p style="margin-bottom:50px;"><i class="fa-solid fa-code" style="padding-right:15px;"></i>BsCode</p>
         <ul>
-            <li><a href="Web_Portfolio.html">Web_Portfolio</a></li>
+            <li class="click_sub_menu"><a href="About_me.html">About Me</a></li>
+            <li class="click_sub_menu">
+                Portfolio
+                <ul class="sub_menu">
+                    <li><a href="Web_Portfolio.html">Web</a></li>
+                </ul>
+            </li>
         </ul>
     </div>
     <section>
