--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <div class="side_box">
         <p style="margin-bottom:50px;"><i class="fa-solid fa-code" style="padding-right:15px;"></i>BsCode</p>
         <ul>
-            <li class="click_sub_menu"><a href="About_me.html">About Me</a></li>
+            <li class="click_sub_menu"><a href="About_me.html">내 소개</a></li>
             <li class="click_sub_menu">
-                Portfolio
+                포트폴리오
                 <ul class="sub_menu">
                     <li><a href="Web_Portfolio.html">Web</a></li>
                 </ul>
