--- a/index.html
+++ b/index.html
@@ -22,9 +22,16 @@
         <ul>
             <li class="click_sub_menu"><a href="About_me.html">내 소개</a></li>
             <li class="click_sub_menu">
-                포트폴리오
+                학습
                 <ul class="sub_menu">
                     <li><a href="Web_Portfolio.html">Web</a></li>
+                    <li><a href="#">알고리즘</a></li>
+                </ul>
+            </li>
+            <li class="click_sub_menu">
+                포트폴리오
+                <ul class="sub_menu">
+                    <li><a href="#">Web</a></li>
                 </ul>
             </li>
         </ul>
