--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
     <div class="side_box">
         <p style="margin-bottom:50px;"><i class="fa-solid fa-code" style="padding-right:15px;"></i>BsCode</p>
         <ul>
-            <li class="click_sub_menu"><a href="About_me.html">내 소개</a></li>
+            <li class="click_sub_menu"><a href="About_me.html">내 소개(About me)</a></li>
             <li class="click_sub_menu">
-                학습
+                학습(Study)
                 <ul class="sub_menu">
-                    <li><a href="Web_Portfolio.html">Web</a></li>
-                    <li><a href="#">알고리즘</a></li>
+                    <li><a href="Web_Portfolio.html">웹(Web)</a></li>
+                    <li><a href="#">알고리즘(Algorithm)</a></li>
                 </ul>
             </li>
             <li class="click_sub_menu">
-                포트폴리오
+                포트폴리오(Portfolio)
                 <ul class="sub_menu">
-                    <li><a href="#">Web</a></li>
+                    <li><a href="#">웹(Web)</a></li>
                 </ul>
             </li>
         </ul>
