--- a/Web_Portfolio.html
+++ b/Web_Portfolio.html
@@ -19,12 +19,12 @@
     <div class="menu_bar">반응형</div>
     <ul>
         <li>
-            <a href="https://jenniejuno.github.io/-starbucks_banch/"><img src="starbucks.png"></a>
-            Starbucks_Banchmarking
+            <a href="https://jenniejuno.github.io/-starbucks_benchmarking/"><img src="starbucks.png"></a>
+            Starbucks_Benchmarking
         </li>
         <li>
-            <a href="https://jenniejuno.github.io/youtube_banchmarking_last/"><img src="youtube.png"></a>
-            Youtube_Banchmarking
+            <a href="https://bscode0147.tistory.com/2"><img src="youtube.png"></a>
+            Youtube_Benchmarking
         </li>
     </ul>
     <script></script>
